# ECS173-HW-2

./: CMakeLists.txt  IterativeClosestPoint1.cxx  gui.cpp  itkIterativeClosestPointMetricIndexed.h  itkIterativeClosestPointMetricIndexed.txx  simple1.wrl  simple2.wrl
